2009-03-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.27

	* autogen.sh: Do not call configure, it's done later by cdbs.
	* debian/rules: Use DEB_CONFIGURE_EXTRA_FLAGS and CFLAGS to pass the
	options in the right way.
	* src/launcher/Makefile.am, src/home/Makefile.am,
	src/Makefile.am, src/util/Makefile.am, src/mb/Makefile.am,
	configure.ac: Link to libmatchbox2 statically when configure flag
	--enable-static-mb2=yes is given.

2009-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#106587 Drawing bug using widgets requesting size bigger than the
	          max size inside dialogs

	* src/mb/hd-dialog.c (hd_dialog_request_geometry):
	  Make sure the granted geometry doesn't exceed the screen height.

2009-03-20  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Misc improvements to prestarting sequence.
	Fixes: NB#106507

	* src/launcher/hd-app-mgr.c:

2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  Little cleanup: name things by their proper name and rename
	  HdCompMgrClientPrivate::portrait_supported to portrait_not_supported.

2009-03-20  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/home/hd-title-bar.c: Ensured that the progress indicator is at
        the end of the title, and that it never overlaps the close button. 
        
2009-03-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#107155 ROTATION: Call handling with system lock dialog is not
	          shown in portrait mode

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Honor the current application's portrait request even
	  if it's not currently visible.

2009-03-20  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Track the windows (including dialogs) for each app so the HdCompMgr can
	tell HdAppMgr when an app has disappeared.
	Fixes: NB#106673

	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-app-mgr.h:
	* src/launcher/hd-launcher-item.c: Added a way to get the GQuark of the