@@ -1,3 +1,10 @@
+2009-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/mb/hd-dialog.c (hd_dialog_request_geometry):
+	  FKB regression fix.  Ignore decorations when decorations are
+	  to be ignored.  Don't reserve cancel area for fullscreen dialogs.
+	  Bocsi.
+
 2009-03-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.27
